--
-- This Source Code Form is subject to the terms of the Mozilla Public
-- License, v. 2.0. If a copy of the MPL was not distributed with this
-- file, You can obtain one at http://mozilla.org/MPL/2.0/.
--

--------------------------------------------------------------------------------
-- SQL SCRIPT TO UPDATE DATABASE FROM 0.0.a2 TO 0.0.a3 IN A DERBY ENVIRONMENT --
--------------------------------------------------------------------------------

-------------------
-- TABLE CHANNEL --
-------------------

CREATE TABLE "APP"."CHANNEL"
(
    ID int CONSTRAINT CHANNEL_PK PRIMARY KEY NOT NULL,
    ENTITYVERSION int,
    CHNLNAME varchar(32) NOT NULL,
    CHNLDESCRIPTION long varchar,
    CHNLREPLACEMENTTAG varchar(16),
    CHNLREPLACEMENTTEXT varchar(64),
    CHNLCREATIONDATE timestamp,
    CHNLLASTUPDATE timestamp
)
;
CREATE UNIQUE INDEX IDX_CHNLNAME ON "APP"."CHANNEL"(CHNLNAME)
;
INSERT INTO APP.COUNTERS (ENTITY, COUNTERVALUE)
	VALUES ('CHANNEL', 0)
;


-------------------
-- TABLE PRODUCT --
-------------------

CREATE TABLE "APP"."PRODUCT"
(
    ID int CONSTRAINT PRODUCT_PK PRIMARY KEY NOT NULL,
    ENTITYVERSION int,
    PRODNAME varchar(32) NOT NULL,
    PRODSRCTYPE varchar(20) NOT NULL,
    L10N_ID int,
    CHANNEL_ID int,
    PRODNOTES long varchar,
    PRODCOLOR varchar(10),
    PRODCREATIONDATE timestamp,
    PRODLASTUPDATE timestamp
)
;
ALTER TABLE "APP"."PRODUCT"
    ADD CONSTRAINT L10N3_FK
    FOREIGN KEY (L10N_ID)
    REFERENCES "APP"."L10N"(ID) ON DELETE CASCADE
;
ALTER TABLE "APP"."PRODUCT"
    ADD CONSTRAINT CHANNEL_FK
    FOREIGN KEY (CHANNEL_ID)
    REFERENCES "APP"."CHANNEL"(ID) ON DELETE CASCADE
;
CREATE UNIQUE INDEX IDX_PRODNMCH ON "APP"."PRODUCT"(PRODNAME, CHANNEL_ID)
;
CREATE INDEX IDX_L10N_NAME ON "APP"."PRODUCT"(L10N_ID, PRODNAME)
;
INSERT INTO APP.COUNTERS (ENTITY, COUNTERVALUE)
	VALUES ('PRODUCT', 0)
;

-------------------------------------------------------------------------
--                        TABLE LOCALECONTAINER                        --
--                                                                     --
-- WARNING: BEFORE MODIFYING THIS TABLE, CHECK BOTH ABSTRACTLOCALENODE --
--          AND LOCALECONTAINER, SINCE THE LATTER EXTENDS THE FORMER   --
-------------------------------------------------------------------------

CREATE TABLE "APP"."LOCALECONTAINER"
(
    ID int CONSTRAINT LOCALECONTAINER_PK PRIMARY KEY NOT NULL,
    ENTITYVERSION int,
    LNODENAME VARCHAR(128) NOT NULL,
    LNODEPARENT int,
    LNODETWIN int,
    LNODECREATIONDATE timestamp,
    LNODELASTUPDATE timestamp
)
;
ALTER TABLE "APP"."LOCALECONTAINER"
    ADD CONSTRAINT PARENT1_FK
    FOREIGN KEY (LNODEPARENT)
    REFERENCES "APP"."LOCALECONTAINER"(ID) ON DELETE CASCADE
;
ALTER TABLE "APP"."LOCALECONTAINER"
    ADD CONSTRAINT TWIN1_FK
    FOREIGN KEY (LNODETWIN)
    REFERENCES "APP"."LOCALECONTAINER"(ID) ON DELETE CASCADE
;
CREATE INDEX IDX_NODENAME ON "APP"."LOCALECONTAINER"(LNODENAME)
;
CREATE INDEX IDX_PARENTNAME ON "APP"."LOCALECONTAINER"(LNODEPARENT, LNODENAME)
;
INSERT INTO APP.COUNTERS (ENTITY, COUNTERVALUE)
	VALUES ('LOCALENODE', 0)
;


-----------------------
-- TABLE LOCALEPATH --
-----------------------

CREATE TABLE "APP"."LOCALEPATH"
(
    ID int CONSTRAINT L10NPATH_PK PRIMARY KEY NOT NULL,
    ENTITYVERSION int,
    L10NPATH VARCHAR(255) NOT NULL,
    L10N_ID int NOT NULL,
    LCONTAINER_ID int UNIQUE NOT NULL,
    PRODPCREATIONDATE timestamp,
    PRODPLASTUPDATE timestamp
)
;
ALTER TABLE "APP"."LOCALEPATH"
    ADD CONSTRAINT L10N4_FK
    FOREIGN KEY (L10N_ID)
    REFERENCES "APP"."L10N"(ID) ON DELETE CASCADE
;
ALTER TABLE "APP"."LOCALEPATH"
    ADD CONSTRAINT LCONTAINER_FK
    FOREIGN KEY (LCONTAINER_ID)
    REFERENCES "APP"."LOCALECONTAINER"(ID) ON DELETE CASCADE
;
CREATE UNIQUE INDEX IDX_PATH ON "APP"."LOCALEPATH"(L10NPATH)
;
INSERT INTO APP.COUNTERS (ENTITY, COUNTERVALUE)
	VALUES ('LOCALEPATH', 0)
;


-----------------------
-- TABLE PRODUCT_PATH --
------------------------

CREATE TABLE "APP"."PRODUCT_PATH"
(
   PRODUCT_ID int NOT NULL,
   LOCALEPATH_ID int NOT NULL,
   CONSTRAINT PRODUCT_PATH_PK PRIMARY KEY (PRODUCT_ID,LOCALEPATH_ID)
)
;
CREATE UNIQUE INDEX IDX_PATH_LOCALE ON "APP"."PRODUCT_PATH"
(
  LOCALEPATH_ID,
  PRODUCT_ID
)
;
ALTER TABLE "APP"."PRODUCT_PATH"
    ADD CONSTRAINT PRODUCT_FK
    FOREIGN KEY (PRODUCT_ID)
    REFERENCES "APP"."PRODUCT"(ID) ON DELETE CASCADE
;
ALTER TABLE "APP"."PRODUCT_PATH"
    ADD CONSTRAINT LOCALEPATH_FK
    FOREIGN KEY (LOCALEPATH_ID)
    REFERENCES "APP"."LOCALEPATH"(ID) ON DELETE CASCADE
;


UPDATE "APP"."CONFIG" SET CONFIGVALUE = '0.0.a3' WHERE ID = 'DB_VERSION';
